<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeRank</string>
    <string name="submit_label">Get data</string>
    <string name="action_settings">Settings</string>
    <string name="rate_1">Very unsafe</string>
    <string name="rate_2">Somewhat unsafe</string>
    <string name="rate_3">Neutral</string>
    <string name="rate_4">Somewhat safe</string>
    <string name="rate_5">Very safe</string>

</resources>
