<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/getData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_label"
        android:onClick="manageData"/>

    <TextView
        android:id="@+id/lat_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/long_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/rate5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_5"
        android:onClick="setRating"/>

    <Button
        android:id="@+id/rate4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_4"
        android:onClick="setRating"/>

    <Button
        android:id="@+id/rate3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_3"
        android:onClick="setRating"/>

    <Button
        android:id="@+id/rate2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_2"
        android:onClick="setRating"/>

    <Button
        android:id="@+id/rate1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_1"
        android:onClick="setRating"/>

</LinearLayout>
